--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@ body {
   background-color: #f3f4f6;
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 70vh;
+  margin-top: 100px;
 }
 
 .board {
@@ -17,7 +16,8 @@ body {
   flex-direction: column;
   align-items: center;
   width: 377px;
-  height: 290px;
+  min-height: 290px;
+  height: fit-content;
   border-radius: 6px;
   padding-top: 24px;
   padding-right: 16px;
@@ -27,9 +27,16 @@ body {
   background-color: white;
 }
 
-.list-text {
+.board-container {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .task__checkbox {
@@ -81,6 +88,8 @@ body {
   padding-right: 16px;
   padding-bottom: 8px;
   padding-left: 16px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  transition: all 0.5s;
 }
 
 #addBtn {
@@ -95,4 +104,28 @@ body {
   background-color: #3c82f6;
   color: white;
   border: none;
+}
+
+.task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 345px;
+  height: 62px;
+  gap: 10px;
+  border-radius: 10px;
+  padding: 16px;
+  background-color: #f9fafb;
+}
+
+.list-text {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+}
+
+.task__checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: start;
 }
