--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
   padding-left: 16px;
   gap: 40px;
   background-color: white;
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.2);
 }
 
 .board-container {
@@ -122,10 +123,62 @@ body {
   display: flex;
   gap: 20px;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 80px;
+  height: fit-content;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+  color: #6b7280;
 }
 
-.task__checkbox {
+.task__text {
   display: flex;
   align-items: center;
   justify-content: start;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: black;
+}
+
+.task_title {
+  display: flex;
+  gap: 10px;
+}
+
+.footer {
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  width: 345px;
+  gap: 4px;
+}
+
+.footer-text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 12px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #6b7280;
+}
+
+.footer-link {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 12px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-decoration: none;
 }
